--- a/roles/ceph-rbd-mirror/tasks/start_rbd_mirror.yml
+++ b/roles/ceph-rbd-mirror/tasks/start_rbd_mirror.yml
@@ -5,3 +5,20 @@
       state: started
       enabled: yes
   changed_when: false
+  when: ceph_release_num.{{ ceph_release }} < ceph_release_num.luminous
+
+- name: stop and remove the generic rbd-mirror service instance
+  service:
+      name: "ceph-rbd-mirror@{{ ceph_rbd_mirror_local_user }}"
+      state: stopped
+      enabled: no
+  changed_when: false
+  when: ceph_release_num.{{ ceph_release }} >= ceph_release_num.luminous
+
+- name: start and add the rbd-mirror service instance
+  service:
+      name: "ceph-rbd-mirror@rbd-mirror.{{ ansible_hostname }}"
+      state: started
+      enabled: yes
+  changed_when: false
+  when: ceph_release_num.{{ ceph_release }} >= ceph_release_num.luminous
