common: refactor installation method
The installation process is now described as follow:

* you still have to choose a 'ceph_origin' installation method. The
origin can be a 'repository' (add a new repository), distro (it will use
the packages provided by the native repo source of your distribution),
local (only available on redhat system, it installs locally built
packages). This option is not well tested, so use it carefully

* if ceph_origin == 'repository' you will have to decide what kind of
repository you want to enable:
  - community: corresponds to the stable upstream/community version
  - enterprise: corresponds to the stable enterprise/downstream version
    (basically you are a red hat customer)
  - dev: it will install ceph from packages built out of the github
    development branches

Signed-off-by: Sébastien Han <seb@redhat.com>
Co-Authored-by: Guillaume Abrioux <gabrioux@redhat.com>
Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/group_vars/osds.yml.sample
+++ b/group_vars/osds.yml.sample
@@ -200,6 +200,7 @@ dummy:
 # Use 'osd_scenario: lvm' to enable this scenario. Currently we only support dedicated journals
 # when using lvm, not collocated journals.
 # lvm_volumes is a dictionary whose key/value pair represent a data lv and a journal pair.
+# Any logical volume or logical group used must be a name and not a path.
 # Journals can be either a lv, device or partition. You can not use the same journal for many data lvs.
 # For example:
 # lvm_volumes:
