--- a/tests/functional/dev_setup.yml
+++ b/tests/functional/dev_setup.yml
@@ -6,16 +6,10 @@
     - vagrant_setup
   tasks:
 
-    - name: change ceph_stable to False
+    - name: change ceph_repository to 'dev'
       replace:
-        regexp: "ceph_stable:.*"
-        replace: "ceph_stable: False"
-        dest: "{{ change_dir }}/group_vars/all"
-      when: change_dir is defined
-
-    - name: set ceph_dev to True
-      lineinfile:
-        line: "ceph_dev: True"
+        regexp: "ceph_repository:.*"
+        replace: "ceph_repository: dev"
         dest: "{{ change_dir }}/group_vars/all"
       when: change_dir is defined
 
