--- a/tests/functional/rhcs_setup.yml
+++ b/tests/functional/rhcs_setup.yml
@@ -27,22 +27,10 @@
         dest: "{{ change_dir }}/vagrant_variables.yml"
       when: change_dir is defined
 
-    - name: change ceph_stable to False
+    - name: change ceph_origin to distro
       replace:
-        regexp: "ceph_stable:.*"
-        replace: "ceph_stable: False"
-        dest: "{{ change_dir }}/group_vars/all"
-      when: change_dir is defined
-
-    - name: set ceph_rhcs to True
-      lineinfile:
-        line: "ceph_rhcs: True"
-        dest: "{{ change_dir }}/group_vars/all"
-      when: change_dir is defined
-
-    - name: set ceph_origin to distro
-      lineinfile:
-        line: "ceph_origin: distro"
+        regexp: "ceph_origin:.*"
+        replace: "ceph_origin: distro"
         dest: "{{ change_dir }}/group_vars/all"
       when: change_dir is defined
 
