--- a/site-docker.yml.sample
+++ b/site-docker.yml.sample
@@ -21,6 +21,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-mon
   serial: 1 # MUST be '1' WHEN DEPLOYING MONITORS ON DOCKER CONTAINERS
 
@@ -29,6 +30,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-osd
 
 - hosts: mdss
@@ -36,6 +38,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-mds
 
 - hosts: rgws
@@ -43,6 +46,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-rgw
 
 - hosts: nfss
@@ -50,6 +54,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-nfs
 
 - hosts: rbd_mirrors
@@ -57,6 +62,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-rbd-mirror
 
 - hosts: restapis
@@ -64,6 +70,7 @@
   roles:
     - ceph-defaults
     - ceph-docker-common
+    - ceph-config
     - ceph-restapi
 
 - hosts: mgrs
@@ -71,6 +78,7 @@
   roles:
     - { role: ceph-defaults, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
     - { role: ceph-docker-common, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
+    - { role: ceph-config, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
     - { role: ceph-mgr, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
 
 - hosts: clients
@@ -78,4 +86,5 @@
   roles:
   - ceph-defaults
   - ceph-common
+  - ceph-config
   - ceph-client
