--- a/roles/ceph-defaults/tasks/check_socket.yml
+++ b/roles/ceph-defaults/tasks/check_socket.yml
@@ -18,4 +18,4 @@
   with_items: "{{ devices }}"
   when:
     - containerized_deployment
-    - inventory_hostname in groups.get(osd_group_name)
+    - inventory_hostname in groups.get(osd_group_name, [])
