--- a/site.yml.sample
+++ b/site.yml.sample
@@ -44,6 +44,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-mon
 
 - hosts: agents
@@ -52,6 +53,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-agent
 
 - hosts: osds
@@ -60,6 +62,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-osd
 
 - hosts: mdss
@@ -68,6 +71,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-mds
 
 - hosts: rgws
@@ -76,6 +80,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-rgw
 
 - hosts: nfss
@@ -84,6 +89,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-nfs
 
 - hosts: restapis
@@ -92,6 +98,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-restapi
 
 - hosts: rbdmirrors
@@ -100,6 +107,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-rbd-mirror
 
 - hosts: clients
@@ -108,6 +116,7 @@
   roles:
     - ceph-defaults
     - ceph-common
+    - ceph-config
     - ceph-client
 
 - hosts: mgrs
@@ -116,4 +125,5 @@
   roles:
     - { role: ceph-defaults, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
     - { role: ceph-common, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
+    - { role: ceph-config, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
     - { role: ceph-mgr, when: "ceph_release_num.{{ ceph_stable_release }} > ceph_release_num.jewel" }
