--- a/roles/ceph-fetch-keys/tasks/main.yml
+++ b/roles/ceph-fetch-keys/tasks/main.yml
@@ -14,6 +14,11 @@
   with_items:
     - "{{ ceph_keys.stdout_lines }}"
 
+- name: register rbd bootstrap key
+  set_fact:
+    bootstrap_rbd_keyring: "/var/lib/ceph/bootstrap-rbd/{{ cluster }}.keyring"
+  when: ceph_release_num.{{ ceph_release }} >= ceph_release_num.luminous
+
 - name: copy keys to the ansible server
   fetch:
     src: "{{ item }}"
@@ -25,3 +30,4 @@
     - "/var/lib/ceph/bootstrap-osd/{{ cluster }}.keyring"
     - "/var/lib/ceph/bootstrap-rgw/{{ cluster }}.keyring"
     - "/var/lib/ceph/bootstrap-mds/{{ cluster }}.keyring"
+    - "{{ bootstrap_rbd_keyring | default([]) }}"
