--- a/roles/ceph-rbd-mirror/tasks/docker/copy_configs.yml
+++ b/roles/ceph-rbd-mirror/tasks/docker/copy_configs.yml
@@ -1,16 +1,18 @@
 ---
+# NOTE (leseb): the mds container needs the admin key
+# so it can create the mds pools for cephfs
 - name: set config and keys paths
   set_fact:
     ceph_config_keys:
       - /etc/ceph/{{ cluster }}.conf
-      - /var/lib/ceph/bootstrap-rgw/{{ cluster }}.keyring
+      - /etc/ceph/{{ cluster }}.client.admin.keyring
 
 - name: stat for ceph config and keys
   local_action: stat path={{ fetch_directory }}/{{ fsid }}/{{ item }}
   with_items: "{{ ceph_config_keys }}"
   changed_when: false
   become: false
-  ignore_errors: true
+  failed_when: false
   always_run: true
   register: statconfig
 
